# music-visualizer

./: .gitignore  CMakeLists.txt  README.md  install.py
src/: App.c  App.cpp  FileSys.c  FileSys.cpp  MusicWrapper.c  MusicWrapper.cpp  Window.c  Window.cpp  keyEvents.c  keyEvents.cpp  logger.c  logger.cpp  main.c  main.cpp
src/includes/: App.h  FileSys.h  KeyEvents.h  MusicWrapper.h  Window.h  core.h  fft.h  hashTable.h  keyEvents.h  logger.h
src/includes/utils/: hashTable.h  utils.h
src/utils/: fft.c  hashTable.c
